attempt to fix form overflow on chrome iOS

--- a/src/styles/Contact.module.scss
+++ b/src/styles/Contact.module.scss
@@ -13,6 +13,7 @@
 	padding-bottom: 5vh;
 	background-color: inherit;
 	height: fit-content;
+	width: 100vw;
 
 	.leftContainer {
 		min-width: 380px;
