--- a/src/styles/Form.module.scss
+++ b/src/styles/Form.module.scss
@@ -2,6 +2,7 @@
 
 .form {
 	width: 70%;
+	max-width: 100%;
 	height: fit-content;
 	display: flex;
 	flex-direction: column;
